m- Centering Fix, Style call in all files m- didnt like the ul view, changed to padding over text alignment and added the style to the recipes

--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
 */
 
 h1 {
-    font-weight: bolder;    
+    font-weight: bolder;
+    font-size: larger;
 }
 
 body {
-    text-align: center;
+    padding: 0 auto;
 }
 
 ul {
